Fixed scrollbars.

--- a/style/code.css
+++ b/style/code.css
@@ -9,7 +9,7 @@ code.code-block {
     background-color: rgb(250, 250, 250);
     padding: 15px;
     font-size: 16px;
-    overflow-x: scroll;
+    overflow-x: auto;
 }
 
 code.code-inline {
@@ -53,5 +53,5 @@ code.code-inline {
 }
 
 .further-reading {
-    overflow-x: scroll;
+    overflow-x: auto;
 }
